<resources>
    <string name="app_name">PomodoroAndroid</string>
    <string name="title_timer">Timer</string>
    <string name="title_preset">Preset</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_home_text">This is home? fragment</string>
    <string name="fragment_preset_text">This is preset fragment</string>
    <string name="fragment_statistics_text">This is statistics fragment</string>
    <string name="fragment_timer_text">This is timer fragment</string>
    <string name="fragment_settings_text">This is settings fragment</string>

    <!-- For Setting fragment string -->
    <string name="settings_ringtone">Ringtone</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_notification">Notification</string>
    <string name="settings_vibration">Vibration</string>
    <string name="settings_clear_history">Clear history</string>
    <string name="adding_preset_focus">Focus time</string>
    <string name="adding_preset_short">Short break time</string>
    <string name="adding_preset_long">Long break time</string>
    <string name="preset_focus_default">25 minutes</string>
    <string name="preset_short_default">5 minutes</string>
    <string name="preset_long_default">15 minutes</string>
    <string name="preset_text">Pomodoro</string>
    <string name="timer_text">0:00</string>
    <string name="start_button_start_text">Start</string>
    <string name="start_button_pause_text">Pause</string>
    <string name="start_button_resume_text">Resume</string>
    <string name="reset_button_text">Reset</string>
    <string name="skip_button_text">Skip</string>
    <string name="short_break_text">Short Break</string>
    <string name="long_break_text">Long Break</string>
    <string name="focus_text">Focus Time!</string>
<<<<<<< HEAD
    <string name="timer_status_text">Focus TIme!</string>
=======
    <string name="preset_popup_menu_edit">edit</string>
    <string name="preset_popup_menu_delete">delete</string>
    <string name="adding_preset_save_button">Save</string>
    <string name="adding_preset_long_after">Long break after</string>
    <string name="adding_preset_default_interval">4 intervals</string>
    <string-array name="long_break_after">
        <item>2 intervals</item>
        <item>3 intervals</item>
        <item>4 intervals</item>
        <item>5 intervals</item>
        <item>6 intervals</item>
        <item>7 intervals</item>
        <item>8 intervals</item>
        <item>9 intervals</item>
        <item>10 intervals</item>
    </string-array>
>>>>>>> a113f2f1d4d17748591425cd743c0f5a56b83ff0
</resources>
