<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <RingtonePreference
        android:defaultValue="1"
        android:key="ringtone_preference_1"
        android:title="@string/settings_ringtone"
        android:selectable="true"
        android:showDefault="true"
        android:ringtoneType="alarm"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_preference_3"
        android:title="@string/settings_sound" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_preference_1"
        android:title="@string/settings_notification" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_preference_2"
        android:title="@string/settings_vibration" />
    <Preference
        android:title="@string/settings_clear_history"
        android:key="clear_history"
        />
</PreferenceScreen>